Fixed the layout bug on banner animation, Added language switcher to banner

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,7 @@
 
 .wrapperCom {
   max-width: 1408px;
-  margin-top: -80px;
+  /* margin-top: -80px; */
 }
 
 .test {
